# RTOS-Sim

./: CMakeLists.txt  README.md  build.ps1  build.sh
app/: main.cpp
include/: clock.h  common.h  config.h  context.h  output_control.h  rtos.h  scheduler.h  task.h
src/: main.cpp  output_control.cpp  rtos.cpp  scheduler.cpp  task.cpp
tests/: rtos_test.cpp  sample_test.cpp  scheduler_test.cpp  task_test.cpp
